<resources>
    <string name="app_name">ProgramLeki</string>
    <string name="testowanie_zapisywania_danych_aplikacji">Testowanie funkcjonalnosci</string>
    <string name="zapis_ustawien_plik_preferences">Zapis ustawien plik preferences</string>
    <string name="zapis_ustawien_w_bazie_sqllite">ZAPIS zestawow lekow</string>
    <string name="sprawdzenie_zapisanych_ustawien">Reports</string>
    <string name="sprawdzenie_zapisanych_ustawien_w_sqlite">Spis zapisanych Alarmow</string>
    <string name="textview2">Pierwsze uruchomienie true/false: </string>
    <string name="textview1">true</string>
    <string name="textview3">Zapis ustawien w pliku preferences</string>
    <string name="textview4">Liczba uruchomien dla zmiennej typu int</string>
    <string name="edittext2">1</string>
    <string name="edittext3">10</string>
    <string name="textview5">Ustawienie zmienna typu float</string>
    <string name="textview6">Ustawienie dla zmiennej typu string</string>
    <string name="edittext4">ang</string>
    <string name="button5">Zapis Ustawien</string>
    <string name="button6">Powrót</string>
    <string name="textview7">Odczyt ustawien aplikacji z pliku preferences</string>
    <string name="textview8">Pierwsze uruchomienie true/false:</string>
    <string name="textview9">true</string>
    <string name="textview10">Liczba uruchomien dla zmiennej typu int</string>
    <string name="textview11">4</string>
    <string name="textview12">Ustawienie zmienna typu float</string>
    <string name="textview13">12</string>
    <string name="textview14">Ustawienie dla zmiennej typu string</string>
    <string name="textview15">pol</string>
    <string name="button7">Powrot</string>
    <string name="button8">Ustawienia Alarmow</string>
    <string name="textview18">Zapisywanie zestawow lekow</string>
    <string name="textview19">Sprawdzenie zapisanych Alarmow</string>
    <string name="button9">Powrot</string>
    <string name="button10">Powrot</string>
    <string name="textview20" />
    <string name="button11">Zapis</string>
    <string name="textview21" />
    <string name="textview22">Zestaw nr: </string>
    <string name="textview23">Lek 1 : </string>
    <string name="textview24">Lek 2 : </string>
    <string name="textview25">Lek 3 : </string>
    <string name="edittext5"></string>
    <string name="edittext6" />
    <string name="edittext7" />
    <string name="edittext8" />
    <string name="button12">powrot</string>
    <string name="textview26">Tworzenie nowego Alarmu Podaj dzien(1 - 7),  godzinę i minutę</string>
    <string name="wordsToSpeak">5</string>
    <string name="speak">Jednorazowy Alarm</string>
    <string name="wordsToSpeak2">2</string>
    <string name="speak2">Zapisz Alarm</string>
    <string name="textview27"></string>
    <string name="editText9">Rozpoznawanie słów:</string>
    <string name="button13">Nagrywanie</string>
    <string name="textview28"></string>
    <string name="button14">Testowanie przypomnien</string>
    <string name="button15">Potwierdzenie   pobrania   leków</string>
    <string name="button16">Start service</string>
    <string name="button17">Stop service</string>
    <string name="button18">Przypominij</string>
    <string name="button19">Powrot</string>
    <string name="editText10">Testowanie przypomnien</string>
    <string name="button20">Cancels Alarms</string>
    <string name="editText11">14</string>
    <string name="editText12">30</string>
    <string name="textView29">:</string>
    <string name="switch1">jednorazowy</string>
    <string name="switch2">codzienny</string>
    <string name="switch3">cotygodniowy</string>
    <string name="textView30">Numer zestawu : </string>
    <string name="button21">Cancel</string>
</resources>
